--- a/week1_intro/crossentropy_method.ipynb
+++ b/week1_intro/crossentropy_method.ipynb
@@ -11,24 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---------+\n",
-      "|\u001b[35mR\u001b[0m: | : :G|\n",
-      "| : : : : |\n",
-      "| : : : : |\n",
-      "| | : | :\u001b[43m \u001b[0m|\n",
-      "|Y| : |\u001b[34;1mB\u001b[0m: |\n",
-      "+---------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import gym\n",
     "import numpy as np, pandas as pd\n",
@@ -40,17 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "n_states=500, n_actions=6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n_states = env.observation_space.n\n",
     "n_actions = env.action_space.n\n",
@@ -212,7 +189,7 @@
     "    elite_states  = <your code here>\n",
     "    elite_actions = <your code here>\n",
     "    \n",
-    "    return elite_states,elite_actions\n",
+    "    return elite_states, elite_actions\n",
     "    "
    ]
   },
@@ -423,7 +400,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Submit to coursera"
+    "### Grader"
    ]
   },
   {
@@ -434,14 +411,17 @@
    },
    "outputs": [],
    "source": [
-    "from submit import submit_taxi\n",
-    "submit_taxi(generate_session, policy, <EMAIL>, <TOKEN>)"
+    "sessions = [generate_session(policy) for _ in range(100)]\n",
+    "_, _, session_rewards = zip(*sessions)\n",
+    "session_rewards = np.array(session_rewards)\n",
+    "assert np.mean(session_rewards) > -48, \"Sorry, but you didn't pass\"\n",
+    "print(\"Congratulations!\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -455,9 +435,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
