--- a/week1_intro/crossentropy_method.ipynb
+++ b/week1_intro/crossentropy_method.ipynb
@@ -174,7 +174,7 @@
     "    Select states and actions from games that have rewards >= percentile\n",
     "    :param states_batch: list of lists of states, states_batch[session_i][t]\n",
     "    :param actions_batch: list of lists of actions, actions_batch[session_i][t]\n",
-    "    :param rewards_batch: list of rewards, rewards_batch[session_i][t]\n",
+    "    :param rewards_batch: list of rewards, rewards_batch[session_i]\n",
     "    \n",
     "    :returns: elite_states,elite_actions, both 1D lists of states and respective actions from elite sessions\n",
     "    \n",
@@ -391,7 +391,7 @@
     "\n",
     "You may have noticed that the taxi problem quickly converges from <-1000 to a near-optimal score and then descends back into -50/-100. This is in part because the environment has some innate randomness. Namely, the starting points of passenger/driver change from episode to episode.\n",
     "\n",
-    "In case CEM failed to learn how to win from one distinct starting point, it will siply discard it because no sessions from that starting point will make it into the \"elites\".\n",
+    "In case CEM failed to learn how to win from one distinct starting point, it will simply discard it because no sessions from that starting point will make it into the \"elites\".\n",
     "\n",
     "To mitigate that problem, you can either reduce the threshold for elite sessions (duct tape way) or  change the way you evaluate strategy (theoretically correct way). You can first sample an action for every possible state and then evaluate this choice of actions by running _several_ games and averaging rewards."
    ]
